# iperf-jni

./: .gitignore  .gitmodules  build.gradle
gradle/wrapper/: gradle-wrapper.properties
iperf/: build.gradle
iperf/src/main/assets/: iperf_config.h.in
iperf/src/main/java/com/synaptictools/iperf/: IPerf.kt
iperf/src/main/jni/: CMakeLists.txt  iperf-jni.cpp  iperf-jni.i
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/synaptictools/sample/: MainActivity.kt
sample/src/main/res/layout/: activity_main.xml
